# Todo-Ai-Chatbot

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PHASE9_VALIDATION.md  PROJECT_STATUS.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  render.yaml  vercel.json
.claude/skills/: conversation-manager.md  crud-generator.md  jwt-validator.md  mcp-validator.md
.specify/memory/: constitution.md
backend/: .env.example  .env.test  .flake8  DATABASE_INDEXES.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/agent/: conversation_manager.py  orchestrator.py  system_prompt.py
backend/app/mcp/: server.py
backend/app/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/app/middleware/: auth.py  error_handler.py  logging.py
backend/app/models/: conversation.py  message.py  task.py  user.py
backend/app/routes/: chat.py  conversations.py  health.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: .env.test  README.md  __init__.py  conftest.py
backend/tests/e2e/: __init__.py  test_user_scenarios.py
backend/tests/integration/: __init__.py  test_auth_middleware.py  test_chat_endpoint.py  test_error_handling.py  test_rate_limiting.py
backend/tests/unit/: __init__.py  test_conversation_manager.py  test_mcp_tools.py  test_models.py  test_orchestrator.py
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx
(+44 files in other folders)
